added a background image to css and styled the list/buttons

--- a/products/products.css
+++ b/products/products.css
@@ -1,3 +1,9 @@
+body {
+    background-image: url("../assets/ocean-blue.png");
+    text-align: center;
+    
+}
+
 #veggies {
     padding: 0;
     display: flex;
