added comment line in CSS so I could submit a pull request

--- a/styles/home.css
+++ b/styles/home.css
@@ -1,3 +1,5 @@
+/* just adding this line so submit another pull request */
+
 /* add home page styles here */
 body {
     background-image: url("../assets/ocean-blue.png");
