--- a/styles/home.css
+++ b/styles/home.css
@@ -3,30 +3,62 @@
 /* add home page styles here */
 @import url('https://fonts.googleapis.com/css?family=Raleway:200');
 
+html, body {
+    height: 100%;
+}
 body {
-    background-image: url("../assets/vegetable-stand.jpg");
-    background-repeat: no-repeat;
+    align-items: center;
+    background-image: url("../assets/farm.jpg");
+    /*position: absolute;*/
+    background-repeat: repeat;
     background-size: 100%;
-    text-align: center;
+    width: 100%;
+    height: 100%;
+    margin: 0;
 }
 
-h1 {
-    display: flex;
+nav {
+    display: inline-flex;
     justify-content: center;
-    background-color: #6494AA;
-    border: 2px solid #151515;
+    align-items: center;
+    flex-direction: row;
+    text-transform: uppercase;
+    font-weight: bolder;
+    letter-spacing: 3px;
+    cursor: pointer;
+    border: 2px solid #F0EDEE;
+    border-radius: 14%;
+
+}
+
+
+header {
+    text-align: center;
+    padding: 10px;
+    font-size: 25px;
 }
 
 a {
-    display: flex;
-    position: relative;
-    top: 210px;
-    left: 45%;
-    background-color: #6494AA;
+  
+    padding: 20px;
+    color: #F0EDEE;
+}
+
+
+div {
+    color: #F0EDEE;
     
 }
 
-div {
-    color: white;
-    font-family: ;
+section {
+    font-weight: bolder;
+    text-transform: uppercase;
+    font-family: fantasy;
+    color: #F0EDEE;
+    text-align: center;
+    font-size: 20px
+}
+
+#buy:hover {
+
 }
