--- a/styles/home.css
+++ b/styles/home.css
@@ -47,6 +47,7 @@ a {
 
 div {
     color: #F0EDEE;
+    text-shadow:  1px 4px 9px #FAC748;
     
 }
 
@@ -56,9 +57,9 @@ section {
     font-family: fantasy;
     color: #F0EDEE;
     text-align: center;
-    font-size: 20px
+    font-size: 20px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
-#buy:hover {
-
-}
